src/scss/layout/_navigation.scss
// Main-Nav
//
// Markup: ../markup/layout.mainnav.html
//
// Styleguide: Layout.Main-Nav

.nav-wrapper {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 0;
  z-index: 1;
  width: 100%;
  min-height: 50px;
  margin: 0 auto;
  padding: 0;
  background-color: #111;
  box-shadow: 0 5px 15px 0 hsla(0, 0%, 0%, 0.15);
  transform-style: preserve-3d;
  backface-visibility: hidden;
  transition: all 0.2s ease-in-out;

  @media screen and (prefers-reduced-motion: reduce) {
    transition: none;
  }
}

.nav {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 80em;
  height: 50px;
  margin: 0 auto;
  padding: 0;

  @media screen and (min-width: $tablet-breakpoint) {
    width: 90%;
  }

  &__logo {
    display: flex;
    justify-items: center;
    white-space: nowrap;
  }

  &__img {
    height: 45px;
  }

  &__toggle {
    z-index: 2;
    margin: 0 1rem;
    padding: 0.5rem;
    color: #e1e1e1;
    background-color: transparent;
    border: 0;
    outline: none;
    box-shadow: none;
    cursor: pointer;
    transition: all 0.3s;

    @media all and (min-width: $desktop-breakpoint) {
      display: none;
    }

    @media screen and (prefers-reduced-motion: reduce) {
      transition: none;
    }
  }

  &__toggle svg {
    display: inherit;
    height: 2em;
    margin: 0;
  }

  &__list {
    position: absolute;
    top: 4.5rem;
    bottom: 0;
    left: -15rem;
    display: block;
    width: 0;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    list-style: none;
    background-color: transparent;
    transform-style: preserve-d;
    backface-visibility: hidden;
    transition: all 0.3s ease-in-out;

    @media all and (min-width: $desktop-breakpoint) {
      position: relative;
      top: unset;
      left: unset;
      width: 100%;
      height: 100%;
      min-height: initial;
      overflow: hidden;
      background: transparent;
    }

    @media screen and (prefers-reduced-motion: reduce) {
      transition: none;
    }
  }

  &__list--open {
    top: 50px;
    left: 0;
    width: 100%;
    padding-bottom: 50px;
  }

  &__list--open > &__left {
    overflow-y: auto;
    overscroll-behavior-y: auto;
  }

  &__left,
  &__right {
    @media all and (min-width: $desktop-breakpoint) {
      overflow: hidden;
    }
  }

  &__left {
    position: relative;
    width: 60%;
    height: 100%;
    background: #111;

    @media all and (min-width: $desktop-breakpoint) {
      display: flex;
      align-items: center;
      justify-content: right;
      width: 100%;
      height: 100%;
      background: transparent;
      border-top: 0;
    }
  }

  &__right {
    width: 40%;

    @media all and (min-width: $desktop-breakpoint) {
      z-index: -1;
      display: none;
    }
  }

  &__item {
    display: flex;
    margin: 0;
    padding: 0;
    border-top: 1px solid #f7f7f7;

    &::before {
      margin-left: 0;
      content: '';
    }

    @media all and (min-width: $desktop-breakpoint) {
      justify-content: flex-start;
      margin-bottom: 0;
      margin-left: 1.5rem;
      border-bottom-color: transparent;
    }
  }

  &__link {
    display: block;
    flex-basis: 100%;
    margin: 0;
    padding: 0.75rem 1rem 0.5rem 1.5rem;
    color: #cfcfcf;
    font-size: 1rem;
    text-decoration: none;
    background: transparent;
    border-color: transparent;
    transition: all 0.3s ease-in-out;

    @media all and (min-width: $desktop-breakpoint) {
      display: block;
      flex-basis: unset;
      padding: 1.25rem 1rem;
      font-size: 1rem;
      background: transparent;
      border-bottom: 2px solid transparent;
      outline: 0;
      transition: all 0.2s ease-in-out;
    }

    @media screen and (prefers-reduced-motion: reduce) {
      transition: none;
    }
  }

  &__link:hover,
  &__link:active,
  &__link:focus {
    color: #222225;
    text-decoration: none;
    background-color: #62c4ff;
  }

  &__link--name {
    z-index: 2;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0.5rem;
    color: #62c4ff;
    font-weight: 600;
    text-decoration: none;
  }

  &__link--name:hover,
  &__link--name:active,
  &__link--name:focus {
    color: #222225;
    text-decoration: none;
    background-color: #62c4ff;
  }
}

